test/2/type/struct-field-follows-variant-expr.ploy
main = {
  _ = (-t 0)
}
